# employee-schedule

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: LoginForm.tsx  Navbar.tsx  ProtectedRoute.tsx  ShiftsManagement.tsx
client/src/components/Calendar/: CalendarContainer.tsx  DayView.tsx  MonthView.tsx  WeekView.tsx  types.ts
client/src/context/: AuthContext.tsx
client/src/pages/: Admin.tsx  Calendar.tsx  Login.tsx  PasswordResetConfirm.tsx  PasswordResetRequest.tsx
client/src/services/: api.ts  auth.ts
server/: create_test_user.py  dockerfile
server/main/: settings.py  urls.py
server/schedulingDB/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/schedulingDB/migrations/: 0001_initial.py  0002_passwordresettoken.py
